--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue-router": "^4.2.5"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
         "@primevue/themes": "^4.0.0-rc.3",
         "chart.js": "^4.4.7",
         "primeicons": "^7.0.0",
