--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
     "dependencies": {
         "@mdi/font": "^7.4.47",
         "@primevue/themes": "^4.0.0-rc.3",
+        "@tiptap/core": "^2.10.4",
+        "@tiptap/extension-bold": "^2.10.4",
+        "@tiptap/extension-bullet-list": "^2.10.4",
+        "@tiptap/extension-highlight": "^2.10.4",
+        "@tiptap/extension-italic": "^2.10.4",
+        "@tiptap/extension-list-item": "^2.10.4",
+        "@tiptap/extension-text-align": "^2.10.4",
+        "@tiptap/starter-kit": "^2.10.4",
+        "@tiptap/vue-3": "^2.10.4",
         "chart.js": "^4.4.7",
         "primeicons": "^7.0.0",
         "primevue": "^4.0.0-rc.3",
