--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@nuxt/devtools": "latest",
         "@nuxtjs/tailwindcss": "6.8.0",
         "@primevue/nuxt-module": "^4.0.0-rc.3",
-        "nuxt": "^3.12.1",
+        "nuxt": "^3.15.0",
         "sass": "^1.80.6",
         "vue-router": "^4.2.5"
     },
@@ -29,7 +29,11 @@
         "@tiptap/extension-text-align": "^2.10.4",
         "@tiptap/starter-kit": "^2.10.4",
         "@tiptap/vue-3": "^2.10.4",
+        "axios": "^1.7.9",
         "chart.js": "^4.4.7",
+        "form-data": "^4.0.1",
+        "formidable": "^3.5.2",
+        "h3-formidable": "^1.0.0",
         "primeicons": "^7.0.0",
         "primevue": "^4.0.0-rc.3",
         "vue-persian-datetime-picker": "^2.10.4"
