--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@tiptap/extension-text-align": "^2.10.4",
         "@tiptap/starter-kit": "^2.10.4",
         "@tiptap/vue-3": "^2.10.4",
+        "@vuepic/vue-datepicker": "^11.0.1",
         "axios": "^1.7.9",
         "chart.js": "^4.4.7",
         "form-data": "^4.0.1",
